data/errors.txt
In file included from HueApplication.cpp:12:0:
HueApplication.h: In function 'int runRESTful(int, char**, Wt::ApplicationCreator)':
HueApplication.h:27:22: error: 'User* HueApplication::curUser_' is private
     User *curUser_ = nullptr;
                      ^
HueApplication.cpp:331:65: error: within this context
             ::activeDB.DBFileManager::saveUser(&HueApplication::curUser_);
                                                                 ^
In file included from HueApplication.cpp:12:0:
HueApplication.h:27:22: error: 'User* HueApplication::curUser_' is private
     User *curUser_ = nullptr;
                      ^
HueApplication.cpp:331:65: error: within this context
             ::activeDB.DBFileManager::saveUser(&HueApplication::curUser_);
                                                                 ^
HueApplication.cpp:331:73: error: no matching function for call to 'DBFileManager::saveUser(User* HueApplication::*)'
             ::activeDB.DBFileManager::saveUser(&HueApplication::curUser_);
                                                                         ^
In file included from HueApplication.cpp:13:0:
DBFileManager.h:28:14: note: candidate: bool DBFileManager::saveUser(User)
         bool saveUser(User newUser); //check for existence in filesystem, build path and write info to file
              ^
DBFileManager.h:28:14: note:   no known conversion for argument 1 from 'User* HueApplication::*' to 'User'
make: *** [HueApplication.o] Error 1
